--- a/app/src/components/guideModule/tokenDeploy/deploy.css
+++ b/app/src/components/guideModule/tokenDeploy/deploy.css
@@ -21,7 +21,7 @@
     font-size: 18px;
     font-weight: 400;
 }
-.contentBox .content{
+.contentBox .artical{
     width: 100%;
     background:rgba(255,255,255,1);
     box-shadow:0px 2px 12px 0px rgba(228,233,247,1);
@@ -29,6 +29,219 @@
     margin-bottom: 20px;
     padding-top: 30px;
     padding-bottom: 30px;
-    padding-right: 20%;
+    padding-right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.artical .deployTabBox{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.artical .deployTabBox .common,.parti{
+    width: 15%;
+    min-width: 130px;
+    height: 26px;
+    line-height: 26px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    cursor: pointer;
+}
+.artical .deployTabBox .parti{
+    margin-left: 20px;
+}
+.artical .deployTabBox .unCheck{
+    width:16px;
+    height:16px;
+    background:rgba(243,245,252,1);
+    border:1px solid rgba(51,129,255,1);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.artical .deployTabBox .unCheck .check{
+    width:5px;
+    height:5px;
+    background:rgba(51,129,255,1);
+    border-radius: 50%;
+}
+.artical .deployTabBox .tab{
+    display: inline-block;
+    color:rgba(90,104,114,1);
+    margin-left: 10px;
+}
+.artical form{
+    width: 100%;
+    min-height: 100px;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+}
+.artical form .formRow{
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 15px;
+}
+.artical form .formRow label{
+    width: 15%;
+    text-align: right;
+    height:38px;
+    line-height: 38px;
+    font-weight:400;
+    color:rgba(90,104,114,1);
+}
+.artical form .formRow input{
+    width: 60%;
+    margin-left: 5%;
+    margin-right: 20%;
+    height:38px;
+    border-radius:4px;
+    border:1px solid rgba(214,214,214,1);
+    padding: 0 15px;
+    outline: none;
+} 
+.sub{
+    width: 170px;
+    height: 42px;
+    line-height: 42px;
+    font-size: 18px;
+    text-align: center;
+    background:linear-gradient(129deg,rgba(111,178,255,1) 0%,rgba(9,95,255,1) 100%);
+    border-radius:3px;
+    font-weight:500;
+    color:rgba(255,255,255,1);
+    margin-top: 30px;
+    cursor: pointer;
+    position: absolute;
+    bottom: -100px;
+}
+.partiForm .add{
+    width: 170px;
+    height: 42px;
+    line-height: 42px;
+    font-size: 24px;
+    text-align: center;
+    background:linear-gradient(130deg,rgba(255,164,72,1) 0%,rgba(255,111,56,1) 100%);
+    border-radius:3px;
+    font-weight:400;
+    color:rgba(255,255,255,1);
+    margin-top: 20px;
+    cursor: pointer;
+}
+.artical .table{
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0 5%;
+    color:rgba(90,104,114,1);
+}
+.artical .table .thead{
+    width: 100%;
+    height: 50px;
+    background:linear-gradient(360deg,rgba(247,250,255,1) 0%,rgba(235,243,255,1) 100%);
+    display: flex;
+    justify-content: flex-start;
+}
+.artical .table .thead .del{
+    width: 7%;
+    height: 50px;
+    line-height: 50px;
+    text-align: left;
+}
+.artical .table .thead .td{
+    width: 15%;
+    height: 50px;
+    line-height: 50px;
+    text-align: left;
+    padding-right: 3%;
+}
+.artical .table .thead .td:nth-of-type(2){
+    width: 40%;
+}
+.table .tr{
+    width: 100%;
+    height: 50px;
+    background:rgba(248,251,255,1);
+    margin-top: 5px;
+    display: flex;
+    justify-content: flex-start;
+}
+.table .tr .del{
+    width: 7%;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+}
+.table .tr .del img{
+    width: 12px;
+    height: 14px;
+    cursor: pointer;
+}
+.table .tr .td{
+    width: 15%;
+    height: 50px;
+    line-height: 50px;
+    text-align: left;
     overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-right: 3%;
+}
+.table .tr .td:nth-of-type(2){
+    width: 40%;
+}
+.artical .deployedCom{
+    width: 50%;
+    display: flex;
+    justify-content: flex-start;
+}
+.deployedCom .label{
+    width: 20%;
+    text-align: right;
+    height:38px;
+    line-height: 38px;
+    font-weight:400;
+    color:rgba(32,32,32,1);
+    font-size: 14px;
+}
+.deployedCom .text{
+    width: 45%;
+    margin-left: 10px;
+    margin-right: 20%;
+    height:38px;
+    line-height: 38px;
+    padding: 0 15px;
+    color:rgba(51,129,255,1);
+}
+.deployedParti{
+    width: 100%;
+    padding: 0 5%;
+    display: flex;
+    justify-content: flex-start;
+}
+.deployedParti .label{
+    width: 15%;
+    text-align: right;
+    height:38px;
+    line-height: 38px;
+    font-weight:400;
+    color:rgba(32,32,32,1);
+    font-size: 14px;
+}
+.deployedParti .text{
+    width: 45%;
+    height:38px;
+    line-height: 38px;
+    color:rgba(51,129,255,1);
+    margin-left: 20px;
 }
