--- a/app/src/components/guideModule/fileOnchain/onchain.css
+++ b/app/src/components/guideModule/fileOnchain/onchain.css
@@ -28,6 +28,7 @@
     justify-content: flex-start;
     align-items: center;
     position: relative;
+    min-width: 950px;
 }
 .onchainBox .table{
     width: 100%;
