--- a/app/src/components/guideModule/tokenComplianceConfigure/configure.css
+++ b/app/src/components/guideModule/tokenComplianceConfigure/configure.css
@@ -30,6 +30,7 @@
     justify-content: flex-start;
     align-items: center;
     position: relative;
+    min-width: 950px;
 }
 .section .table{
     width: 100%;
@@ -285,6 +286,7 @@ form .sub{
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 .section .configureContent .text .arrow:nth-of-type(4){
     margin-top: 5px;
@@ -292,12 +294,14 @@ form .sub{
 .section .configureContent .text .arrow img{
     width: 15px;
     height: 14px;
+    cursor: pointer;
 }
 .section .configureContent .listBox{
     width: 74%;
     min-width: 405px;
     display: flex;
     justify-content: center;
+    min-height: 48px;
 }
 .section .configureContent .row .text .listBox ul{
     width: 100%;
@@ -310,7 +314,6 @@ form .sub{
 .section .configureContent .row .text .listBox ul li{
     width: 100%;
     height: 38px;
-    line-height: 38px;
     border-bottom: 1px solid rgba(214,214,214,1);
     list-style: none;
     font-weight:400;
@@ -327,6 +330,7 @@ form .sub{
     float: right;
     width: 13px;
     height: 13px;
+    cursor: pointer;
 }
 .section .configureContent .row .text .textArea{
     width: 74%;
@@ -336,4 +340,6 @@ form .sub{
     padding: 15px;
     min-height: 48px;
     margin-top: 30px;
+    color:rgba(128,128,128,1);
+    font-size: 12px;
 }
