--- a/app/src/components/guideModule/tokenDeploy/deploy.css
+++ b/app/src/components/guideModule/tokenDeploy/deploy.css
@@ -34,6 +34,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    min-width: 950px;
 }
 .artical .deployTabBox{
     width: 100%;
