--- a/app/src/components/guideModule/fileOnchain/onchain.css
+++ b/app/src/components/guideModule/fileOnchain/onchain.css
@@ -52,6 +52,9 @@
     text-align: left;
     padding-right: 2%;
 }
+.onchainBox .table .thead .td:nth-of-type(1){
+    padding-left: 1%;
+}
 .onchainBox .table .thead .td:nth-last-of-type(1){
     width: 15%;
 }
@@ -80,6 +83,9 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     padding-right: 2%;
+}
+.onchainBox .table .tr .td:nth-of-type(1){
+    padding-left: 1%;
 }
 .onchainBox .table .tr .td:nth-last-of-type(2){
     width: 25%;
