add show register detail

--- a/app/src/components/guideModule/tokenDeploy/deploy.css
+++ b/app/src/components/guideModule/tokenDeploy/deploy.css
@@ -92,12 +92,13 @@
     margin-bottom: 15px;
 }
 .artical form .formRow label{
-    width: 15%;
+    width: 20%;
     text-align: right;
     height:38px;
     line-height: 38px;
     font-weight:400;
     color:rgba(90,104,114,1);
+    white-space: nowrap;
 }
 .artical form .formRow input{
     width: 60%;
