--- a/app/src/index.css
+++ b/app/src/index.css
@@ -7,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #1D2439!important;
+  background-color: #fff;
 }
 
 code {
