--- a/app/src/components/guideModule/informRegister/register.css
+++ b/app/src/components/guideModule/informRegister/register.css
@@ -213,11 +213,20 @@
     border-radius:3px;
     font-weight:500;
     color:rgba(255,255,255,1);
-    margin-top: 30px;
+    margin-top: 40px;
     cursor: pointer;
 }
 .audit{
+    float: left;
+    margin-left: 30%;
+}
+.deny{
+    float: left;
+    margin-left: 40px;
+}
+.ready{
     margin-left: 40%;
+    margin-top: 50px;
 }
 .projSub{
     display: inline-block;
@@ -266,4 +275,25 @@
     margin-left: 40%;
     margin-bottom: 30px;
     cursor: pointer;    
+}
+.contentBox .comment{
+    height: 38px;
+    display: flex;
+    align-items: flex-start;
+    margin-top: 60px;
+}
+.contentBox .comment div{
+    height: 42px;
+    line-height: 42px;
+    margin-left: 23%;
+}
+.contentBox .comment input{
+    margin-left: 40px;
+    width: 380px;
+    height: 42px;
+    line-height: 42px;
+    padding-left: 10px;
+    border: 1px solid rgba(214,214,214,1);
+    border-radius: 4px;
+    outline: none;
 }
